--- a/public/index.html
+++ b/public/index.html
@@ -40,12 +40,18 @@
   <!-- App JS -->
   <script type="text/javascript" src="/scripts/client.js"></script>
   <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+  
 
   <!-- Server Data -->
   <link rel="dataFiles" href="/server/data-files/initial-tweets.json" type="text/json" />
 
+  <!-- time ago app -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js" integrity="sha512-SVDh1zH5N9ChofSlNAK43lcNS7lWze6DTVx1JCXH1Tmno+0/1jMpdbR8YDgDUfcUrPp1xyE53G42GFrcM0CMVg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
+  <!-- Error message -->
+  <script type="text/javascript" src="/scripts/error-message.js"></script>
 </head>
+
 
 <body>
   <!-- Top nav bar (fixed) -->
@@ -66,7 +72,7 @@
       <img src="/images/profile-hex.png">
       <br>
       <div class="headerName">
-        <h2>Your Name</h2>
+        <h2>Max</h2>
       </div>
     </div>
   </header>
@@ -74,20 +80,20 @@
   <!-- Page-specific (main) content here -->
   <main class="container">
     <section>
-      <h4>What are you humming about?</h4>
+      <div id="error-empty">Your tweet is empty! >:(</div>
+      <div id="error-tooLong">Your tweet is way too long. >:(</div>
       <form action="/tweets" method="POST">
         <label for="tweet-text"></label>
         <textarea placeholder="What are you humming about?" name="text" id="tweet-text"></textarea>
         <div class="tweetSubmit">
           <button class="button" type="submit">Tweet</button>
-          <output name="counter" class="counter" for="tweet-text">140</output>
+          <output name="counter" class="counter" id="counter" for="tweet-text">140</output>
         </div>
       </form>
     </section>
 
   <!-- posted tweets go here -->
     <section id="tweet-container"></section>
-
   </main>
 
 </body>
